Algunos cambios antes de pasarlo a main